Continue trying to fix pointer events on safari

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -26,7 +26,7 @@ $world-width: 1000px;
   flex-grow: 1;
   flex-shrink: 1;
   perspective: 800px;
-  touch-action: pan-x pan-y;
+  touch-action: none;
   * {
     transform-style: preserve-3d;
     position: absolute;
